2004-03-17  Glynn Foster  <glynn.foster@sun.com>

	* docs/ja/*: Add ja docs since the original author didn't get back
	to me.

2004-03-16  Glynn Foster  <glynn.foster@sun.com>

	* docs/Makefile.am: Add l10n'd docs to the build.
	* docs/it/Makefile.am: Point to the proper omf file - I think.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*.sgml: Remove the old sgml docs that we don't need 
	anymore.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>
	
	* docs/*: Localized online help from Sun's translation team for
	de, es, fr, it, ko, sv, zh_CN, zh_HK and zh_TW

2004-03-10  Dennis Smit  <ds@nerds-incorporated.org>

	* weather.c (weather_info_get_wind):
	Ditto like the previous commit.

2004-03-10  Dennis Smit  <ds@nerds-incorporated.org>

	* weather.c (weather_info_get_pressure, weather_info_get_visibility):
	Made the buffers a bit longer so international characters do fit
	in the buffer as requested by the Thai translation team.

	Fixes bug #136717.

2004-03-05  Dennis Smit  <ds@nerds-incorporated.org>

	Submitting patch by:
	
	Chris Lahey  <clahey@rigger.boston.ximian.com>

	* weather.c (iwin_start_open): This was not using the return value
	of g_ascii_strdown which allocates a new value.

	Fixes bug #136186.

2004-02-29  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-applet.c (change_background_cb):
	Removed bogus return.

2004-02-28  Kevin Vandersloot

	* Locations: Update Petawawa. Patch from Stephen Depooter. Fixes bug 
	#131797

2004-02-28  Kevin Vandersloot

	* Locations: Update Hnugarian locations. Patch from Egmont Koblinger. Fixes bug 
	#135602

2004-02-28  Kevin Vandersloot

	* Locations: Add Philippines. Patch from Eric Pareja. Fixes bug 
	#135694

2004-02-28  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-applet.c (place_widgets):
	Should size better to panel now because we're using
	widget allocation sizes instead of normalized panel
	sizes. The panel only emits change_size signals on
	normalized values tho. bleh.
