@@ -1,3 +1,8 @@
+2004-04-25  Kevin Vandersloot <kfv101 psu edu>
+
+	* weather.c: Fix for certain invalid conditions. From bug #134452. Patch
+	from Arnaud Patard .
+
 2004-03-17  Glynn Foster  <glynn.foster@sun.com>
 
 	* docs/ja/*: Add ja docs since the original author didn't get back
